--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -23,8 +23,6 @@ common-time.workspace = true
 common-version.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
-futures.workspace = true
-futures-util.workspace = true
 num = "0.4"
 num-traits = "0.2"
 once_cell.workspace = true
@@ -33,6 +31,7 @@ serde.workspace = true
 serde_json.workspace = true
 session.workspace = true
 snafu.workspace = true
+sql.workspace = true
 statrs = "0.16"
 store-api.workspace = true
 table.workspace = true
