--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -34,11 +34,9 @@ enable_region_failover = false
 ## The runtime options.
 [runtime]
 ## The number of threads to execute the runtime for global read operations.
-read_rt_size = 8
+global_rt_size = 8
 ## The number of threads to execute the runtime for global write operations.
-write_rt_size = 8
-## The number of threads to execute the runtime for global background operations.
-bg_rt_size = 4
+compact_rt_size = 4
 
 ## Procedure storage options.
 [procedure]
