feat: add source channel to meter recorders

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -119,12 +119,13 @@ etcd-client = { version = "0.13" }
 fst = "0.4.7"
 futures = "0.3"
 futures-util = "0.3"
-greptime-proto = { git = "https://github.com/GreptimeTeam/greptime-proto.git", rev = "7ca323090b3ae8faf2c15036b7f41b7c5225cf5f" }
+greptime-proto = { git = "https://github.com/GreptimeTeam/greptime-proto.git", rev = "e52fa3e63c77545618328781e11178eb2cfc45c5" }
 humantime = "2.1"
 humantime-serde = "1.1"
 itertools = "0.10"
 lazy_static = "1.4"
-meter-core = { git = "https://github.com/GreptimeTeam/greptime-meter.git", rev = "80b72716dcde47ec4161478416a5c6c21343364d" }
+meter-core = { git = "https://github.com/GreptimeTeam/greptime-meter.git", rev = "488844b4702916cc6f7d04898fb0b837afce4ca7" }
+meter-macros = { git = "https://github.com/GreptimeTeam/greptime-meter.git", rev = "488844b4702916cc6f7d04898fb0b837afce4ca7" }
 mockall = "0.11.4"
 moka = "0.12"
 notify = "6.1"
@@ -235,10 +236,6 @@ sql = { path = "src/sql" }
 store-api = { path = "src/store-api" }
 substrait = { path = "src/common/substrait" }
 table = { path = "src/table" }
-
-[workspace.dependencies.meter-macros]
-git = "https://github.com/GreptimeTeam/greptime-meter.git"
-rev = "80b72716dcde47ec4161478416a5c6c21343364d"
 
 [profile.release]
 debug = 1
