chore: revert cargo toml structure changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,7 +125,6 @@ humantime-serde = "1.1"
 itertools = "0.10"
 lazy_static = "1.4"
 meter-core = { git = "https://github.com/GreptimeTeam/greptime-meter.git", rev = "488844b4702916cc6f7d04898fb0b837afce4ca7" }
-meter-macros = { git = "https://github.com/GreptimeTeam/greptime-meter.git", rev = "488844b4702916cc6f7d04898fb0b837afce4ca7" }
 mockall = "0.11.4"
 moka = "0.12"
 notify = "6.1"
@@ -236,6 +235,10 @@ sql = { path = "src/sql" }
 store-api = { path = "src/store-api" }
 substrait = { path = "src/common/substrait" }
 table = { path = "src/table" }
+
+[workspace.dependencies.meter-macros]
+git = "https://github.com/GreptimeTeam/greptime-meter.git"
+rev = "488844b4702916cc6f7d04898fb0b837afce4ca7"
 
 [profile.release]
 debug = 1
