--- a/.github/actions/setup-greptimedb-cluster/with-remote-wal.yaml
+++ b/.github/actions/setup-greptimedb-cluster/with-remote-wal.yaml
@@ -1,9 +1,7 @@
 meta:
   config: |-
     [runtime]
-    read_rt_size = 8
-    write_rt_size = 8
-    bg_rt_size = 8
+    global_rt_size = 4
     
     [wal]
     provider = "kafka"
@@ -17,9 +15,8 @@ meta:
 datanode:
   config: |-
     [runtime]
-    read_rt_size = 8
-    write_rt_size = 8
-    bg_rt_size = 8
+    global_rt_size = 4
+    compact_rt_size = 2
 
     [wal]
     provider = "kafka"
@@ -28,9 +25,7 @@ datanode:
 frontend:
   config: |-
     [runtime]
-    read_rt_size = 8
-    write_rt_size = 8
-    bg_rt_size = 8
+    global_rt_size = 4
 
     [meta_client]
     ddl_timeout = "60s"
