refactor: refactor `GlobalIndexCollector`

--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -15,6 +15,7 @@ workspace = true
 [dependencies]
 async-stream.workspace = true
 async-trait.workspace = true
+bytes.workspace = true
 chrono.workspace = true
 common-base.workspace = true
 common-error.workspace = true
