--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -44,12 +44,14 @@ greptime-proto.workspace = true
 # otherwise it is the same with upstream repo
 hydroflow = { git = "https://github.com/GreptimeTeam/hydroflow.git", branch = "main" }
 itertools.workspace = true
+lazy_static.workspace = true
 meta-client.workspace = true
 minstant = "0.1.7"
 nom = "7.1.3"
 num-traits = "0.2"
 operator.workspace = true
 partition.workspace = true
+prometheus.workspace = true
 prost.workspace = true
 query.workspace = true
 serde.workspace = true
