--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -11,10 +11,11 @@ server_addr = "127.0.0.1:3002"
 store_addr = "127.0.0.1:2379"
 
 ## Datanode selector type.
-## - `lease_based` (default value).
+## - `round_robin` (default value)
+## - `lease_based`
 ## - `load_based`
 ## For details, please see "https://docs.greptime.com/developer-guide/metasrv/selector".
-selector = "lease_based"
+selector = "round_robin"
 
 ## Store data in memory.
 use_memory_store = false
