fix:  change the type of oid in pg_namespace to u32

--- a/src/catalog/Cargo.toml
+++ b/src/catalog/Cargo.toml
@@ -40,6 +40,7 @@ moka = { workspace = true, features = ["future", "sync"] }
 partition.workspace = true
 paste = "1.0"
 prometheus.workspace = true
+rustc-hash.workspace = true
 serde_json.workspace = true
 session.workspace = true
 snafu.workspace = true
