--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -187,6 +187,20 @@ backoff_base = 2
 ## **It's only used when the provider is `kafka`**.
 backoff_deadline = "5mins"
 
+# The Kafka SASL configuration
+# **It's only used when the provider is `kafka`**.
+# [wal.sasl]
+# type = "SCRAM-SHA-512"
+# username = "hi"
+# password = "test"
+
+# The Kafka TLS configuration
+# **It's only used when the provider is `kafka`**.
+# [wal.tls]
+# server_ca_cert_path = "/path/to/server_cert"
+# client_cert_path = "/path/to/client_cert"
+# client_key_path = "/path/to/key"
+
 # Example of using S3 as the storage.
 # [storage]
 # type = "S3"
