--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -15,6 +15,7 @@ bytes.workspace = true
 common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
+common-runtime.workspace = true
 common-telemetry.workspace = true
 fst.workspace = true
 futures.workspace = true
