--- a/src/pipeline/Cargo.toml
+++ b/src/pipeline/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 workspace = true
 
 [dependencies]
+ahash = "0.8"
 api.workspace = true
 arrow.workspace = true
 async-trait.workspace = true
@@ -35,6 +36,7 @@ datafusion-expr.workspace = true
 datafusion-functions.workspace = true
 datafusion-physical-expr.workspace = true
 datatypes.workspace = true
+enum_dispatch = "0.3"
 futures.workspace = true
 greptime-proto.workspace = true
 itertools.workspace = true
@@ -57,7 +59,13 @@ yaml-rust = "0.4"
 
 [dev-dependencies]
 catalog = { workspace = true, features = ["testing"] }
+criterion = { version = "0.4", features = ["html_reports"] }
 rayon = "1.0"
 ron = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 session = { workspace = true, features = ["testing"] }
+
+[[bench]]
+name = "processor"
+harness = false
+path = "benches/processor.rs"
