chore: add example configs that introduced after pg_kvbackend

--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -7,7 +7,7 @@ bind_addr = "127.0.0.1:3002"
 ## The communication server address for frontend and datanode to connect to metasrv,  "127.0.0.1:3002" by default for localhost.
 server_addr = "127.0.0.1:3002"
 
-## Etcd server address.
+## Store server address default to etcd store.
 store_addr = "127.0.0.1:2379"
 
 ## Datanode selector type.
@@ -31,6 +31,9 @@ store_key_prefix = ""
 ## - Using Remote WAL
 ## - Using shared storage (e.g., s3).
 enable_region_failover = false
+
+## The datastore for meta server.
+backend = "EtcdStore"
 
 ## The runtime options.
 [runtime]
