--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -39,3 +39,5 @@ table.workspace = true
 [dev-dependencies]
 ron = "0.7"
 serde = { version = "1.0", features = ["derive"] }
+tokio.workspace = true
+tokio-test = "0.4"
