chore: add `stats` feature for jemalloc-ctl

--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -109,7 +109,7 @@ uuid.workspace = true
 zstd.workspace = true
 
 [target.'cfg(not(windows))'.dependencies]
-tikv-jemalloc-ctl = { version = "0.6", features = ["use_std"] }
+tikv-jemalloc-ctl = { version = "0.6", features = ["use_std", "stats"] }
 
 [dev-dependencies]
 auth = { workspace = true, features = ["testing"] }
