--- a/src/datatypes/Cargo.toml
+++ b/src/datatypes/Cargo.toml
@@ -23,7 +23,7 @@ common-telemetry.workspace = true
 common-time.workspace = true
 datafusion-common.workspace = true
 enum_dispatch = "0.3"
-jsonb = "0.4.1"
+jsonb.workspace = true
 num = "0.4"
 num-traits = "0.2"
 ordered-float = { version = "3.0", features = ["serde"] }
