fix: allow to create and insert json data

--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -34,6 +34,7 @@ snafu.workspace = true
 sqlparser.workspace = true
 sqlparser_derive = "0.1"
 table.workspace = true
+jsonb.workspace = true
 
 [dev-dependencies]
 common-datasource.workspace = true
