--- a/.github/actions/build-windows-artifacts/action.yml
+++ b/.github/actions/build-windows-artifacts/action.yml
@@ -4,9 +4,6 @@ inputs:
   arch:
     description: Architecture to build
     required: true
-  rust-toolchain:
-    description: Rust toolchain to use
-    required: true
   cargo-profile:
     description: Cargo profile to build
     required: true
@@ -28,9 +25,8 @@ runs:
     - uses: arduino/setup-protoc@v3
 
     - name: Install rust toolchain
-      uses: dtolnay/rust-toolchain@master
+      uses: actions-rust-lang/setup-rust-toolchain@v1
       with:
-        toolchain: ${{ inputs.rust-toolchain }}
         targets: ${{ inputs.arch }}
         components: llvm-tools-preview
 
