ci: add check-builder-rust-version job in release and change release-dev-builder-images trigger condition

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,6 +98,16 @@ permissions:
   contents: write # Allows the action to create a release.
 
 jobs:
+  check-builder-rust-version:
+    name: Check rust version in builder
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check Rust toolchain version
+        shell: bash
+        run: |
+          ./scripts/check-builder-rust-version.sh
+
   allocate-runners:
     name: Allocate runners
     if: ${{ github.repository == 'GreptimeTeam/greptimedb' }}
