--- a/.github/workflows/release-dev-builder-images.yaml
+++ b/.github/workflows/release-dev-builder-images.yaml
@@ -1,6 +1,12 @@
 name: Release dev-builder images
 
 on:
+  push:
+    branches:
+      - main
+    paths:
+      - rust-toolchain.toml
+      - 'docker/dev-builder/**'
   workflow_dispatch: # Allows you to run this workflow manually.
     inputs:
       release_dev_builder_ubuntu_image:
