--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -171,7 +171,11 @@ sync_period = "10s"
 ## **It's only used when the provider is `kafka`**.
 broker_endpoints = ["127.0.0.1:9092"]
 
-## Number of topics to be created upon start.
+## Create topics for WAL
+## Set to false to use existing topics. It will then use topics named topic_name_prefix_[0..num_topics)
+create_topic = true
+
+## Number of topics.
 ## **It's only used when the provider is `kafka`**.
 num_topics = 64
 
@@ -182,6 +186,7 @@ num_topics = 64
 selector_type = "round_robin"
 
 ## A Kafka topic is constructed by concatenating `topic_name_prefix` and `topic_id`.
+## i.g., greptimedb_wal_topic_0, greptimedb_wal_topic_1.
 ## **It's only used when the provider is `kafka`**.
 topic_name_prefix = "greptimedb_wal_topic"
 
