--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -99,8 +99,9 @@ provider = "raft_engine"
 ## The broker endpoints of the Kafka cluster.
 broker_endpoints = ["127.0.0.1:9092"]
 
-## Create topics for WAL
-## Set to false to use existing topics. It will then use topics named topic_name_prefix_[0..num_topics)
+## Create topics for WAL.
+## Set to `true` to automatically create topics for WAL.
+## Otherwise, use topics named `topic_name_prefix_[0..num_topics)`
 create_topic = true
 
 ## Number of topics.
