feat: udf to query json as string

--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -35,6 +35,7 @@ sql.workspace = true
 statrs = "0.16"
 store-api.workspace = true
 table.workspace = true
+jsonb.workspace = true
 
 [dev-dependencies]
 ron = "0.7"
