--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -171,10 +171,10 @@ sync_period = "10s"
 ## **It's only used when the provider is `kafka`**.
 broker_endpoints = ["127.0.0.1:9092"]
 
-## Create topics for WAL.
+## Automatically create topics for WAL.
 ## Set to `true` to automatically create topics for WAL.
 ## Otherwise, use topics named `topic_name_prefix_[0..num_topics)`
-create_topic = true
+auto_create_topics = true
 
 ## Number of topics.
 ## **It's only used when the provider is `kafka`**.
