--- a/.github/workflows/release-dev-builder-images.yaml
+++ b/.github/workflows/release-dev-builder-images.yaml
@@ -40,7 +40,7 @@ jobs:
           buildTime=`date +%Y%m%d%H%M%S`
           BUILD_VERSION="$commitShortSHA-$buildTime"
           RUST_TOOLCHAIN_VERSION=$(cat rust_toolchain.toml | grep -Eo '[0-9]{4}-[0-9]{2}-[0-9]{2}')
-          VERSION="${BUILD_VERSION}-${RUST_TOOLCHAIN_VERSION}"
+          VERSION="${RUST_TOOLCHAIN_VERSION}-${BUILD_VERSION}"
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
           echo "version=VERSION" >> $GITHUB_OUTPUT
 
