fix: failed to get github sha

--- a/.github/workflows/release-dev-builder-images.yaml
+++ b/.github/workflows/release-dev-builder-images.yaml
@@ -36,7 +36,7 @@ jobs:
         id: set-version
         shell: bash
         run: |
-          commitShortSHA=`echo ${GITHUB_SHA} | cut -c1-8`
+          commitShortSHA=`echo ${{ github.sha }} | cut -c1-8`
           buildTime=`date +%Y%m%d%H%M%S`
           BUILD_VERSION="$commitShortSHA-$buildTime"
           RUST_TOOLCHAIN_VERSION=$(cat rust_toolchain.toml | grep -Eo '[0-9]{4}-[0-9]{2}-[0-9]{2}')
